# cpp_starter

./: CMakeLists.txt
mylibrary/: CMakeLists.txt
mylibrary/src/: main.cpp
